WindGroup Dev/src/objects/Journal_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>COA_Balance__r.Account_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Balance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Balance</label>
        <referenceTo>COA_Balance__c</referenceTo>
        <relationshipName>J_Entrys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COA_Master__c</fullName>
        <formula>COA_Balance__r.COA_Master__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COA Master</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Detail</label>
        <referenceTo>Cash_Detail__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cr_Amount__c</fullName>
        <label>Cr Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doc_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line Item</label>
        <referenceTo>Invoice_Line_Item__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>J_Entrys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dr_Amount__c</fullName>
        <label>Dr Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <formula>Journal_Voucher__r.Fiscal_Period__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JE_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JE Configuration</label>
        <referenceTo>JE_Configuration__c</referenceTo>
        <relationshipName>J_Entrys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JE_Logic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JE Logic</label>
        <referenceTo>JE_Logic__c</referenceTo>
        <relationshipName>J_Entrys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populated from related Journal Voucher</inlineHelpText>
        <label>Journal Batch</label>
        <referenceTo>Journal_Batch__c</referenceTo>
        <relationshipLabel>Journal Voucher Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher__c</fullName>
        <label>Journal Voucher</label>
        <referenceTo>Journal_Voucher__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>J_Entrys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Posting_Status__c</fullName>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unposted</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Journal Entry</label>
    <nameField>
        <label>Journal Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>